[package]
name = "zelda"
version = "0.1.0"
edition = "2018"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"

[dependencies]
dotenv = "0.15"

[dependencies.rocket]
git = "https://github.com/SergioBenitez/Rocket"
version = "0.5.0-rc.1"
default-features = false
features = ["json"]

[dependencies.serde]
version = "1.0"
default-features = false
features = ["derive"]
